--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -5,14 +5,14 @@ error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=palaver account activation
-email.activation.greeting=Dear {0}
-email.activation.text1=Your palaver account has been created, please click on the URL below to activate it:
-email.activation.text2=Regards,
-email.signature=palaver Team.
+email.activation.title=Activacion de cuenta Palaver.
+email.activation.greeting=Querido {0}
+email.activation.text1=Su cuenta de palaver ha sido creada, por favor haga click en el enlace de abajo para activarla:
+email.activation.text2=Atentamente,
+email.signature=El Equipo de Palaver.
 
 # Creation email
-email.creation.text1=Your palaver account has been created, please click on the URL below to access it:
+email.creation.text1=Su cuenta de palaver ha sido creada, por favor haga click en el enlace de abajo para acceder a ella:
 
 # Reset email
 email.reset.title=palaver password reset
