--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -6,7 +6,7 @@ error.message=Message:
 
 # Activation email
 email.activation.title=Activacion de cuenta Palaver.
-email.activation.greeting=Querido {0}
+email.activation.greeting=Hola {0}!
 email.activation.text1=Su cuenta de palaver ha sido creada, por favor haga click en el enlace de abajo para activarla:
 email.activation.text2=Atentamente,
 email.signature=El Equipo de Palaver.
