--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,3 +19,10 @@ email.reset.title=palaver password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your palaver account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+
+# Payment email
+email.payment.title=Transacción exitosa.
+email.payment.greeting=Hola {0}!
+email.payment.text1=Su transacción ha sido completada de manera exitosa.
+email.payment.text2=Atentamente,
+email.payment.signature=El Equipo de Palaver.
