Added mail sender for payments

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -21,8 +21,8 @@ email.reset.text1=For your palaver account a password reset was requested, pleas
 email.reset.text2=Regards,
 
 # Payment email
-email.payment.title=Transacción exitosa.
+email.payment.title=Transaccion exitosa.
 email.payment.greeting=Hola {0}!
-email.payment.text1=Su transacción ha sido completada de manera exitosa.
+email.payment.text1=Su recarga ha sido completada de manera exitosa.
 email.payment.text2=Atentamente,
 email.payment.signature=El Equipo de Palaver.
