Added bans verification logic

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -23,6 +23,6 @@ email.reset.text2=Regards,
 # Payment email
 email.payment.title=Transaccion exitosa.
 email.payment.greeting=Hola {0}!
-email.payment.text1=Su recarga ha sido completada de manera exitosa.
+email.payment.text1=Su recarga de {0}, ha sido completada de manera exitosa.
 email.payment.text2=Atentamente,
 email.payment.signature=El Equipo de Palaver.
